# ThreePaneWindows

./: .flake8  .gitignore  .pre-commit-config.yaml  API.md  CENTRAL_THEME_MANAGER.md  CHANGELOG.md  COMPLEXITY_REFACTORING_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  CROSS_PLATFORM_ICONS.md  CROSS_PLATFORM_THEMING.md  DEVELOPMENT_LOGGING.md  DEVELOPMENT_SETUP.md  DEVELOP_BRANCH_UPLOAD.md  DEV_LOGGING_SUMMARY.md  DEV_TOOLS.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  DockableThreePaneWindow.py  ENHANCED_DEMO_FIXES.md  ENHANCED_FEATURES.md  ENHANCED_FEATURES_SUMMARY.md  ENHANCED_TESTS_README.md  EXAMPLES_REFACTORING_SUMMARY.md  EXPANSION_FEATURES.md  EXPANSION_SYSTEM_SUMMARY.md  FIXED_TESTS_SUMMARY.md  FIXED_WIDTH_FEATURES.md  FIXES_SUMMARY.md  FLEXIBLE_LAYOUT_SYSTEM.md  FOCUS_FIX_SUMMARY.md  FixedThreePaneWindow.py  LICENSE  LOGGING_IMPLEMENTATION_SUMMARY.md  MANIFEST-stubs.in  MANIFEST.in  NEW_FEATURES_TESTING_SUMMARY.md  ORGANIZATION_SUMMARY.md  PACKAGE_SUMMARY.md  (+65 more)
.github/: ENVIRONMENTS_SETUP.md  GREADME.md  PYPI_API_TOKEN_SETUP.md  pull_request_template.md  validate_api_token_setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  docs.yml  release-stubs.yml  release.yml  test-new-features.yml  test-pypi-upload.yml  test-release.yml
.zencoder/docs/: repo.md
dev/: SUMMARY_CLEAN_20250618_185319.md  SUMMARY_EXAMPLES_20250618_183137.md  SUMMARY_FEATURE_20250618_185446.md  SUMMARY_GENERAL_20250618_185414.md  SUMMARY_GENERAL_20250618_190254.md  SUMMARY_GENERAL_20250618_191853.md
docs/: changelog.md  conf.py  contributing.md  index.rst  installation.rst  logging.md  quickstart.rst  requirements.txt
docs/_static/: .gitkeep
docs/api/: cli.rst  dockable.rst  enhanced.rst  fixed.rst  index.rst  themes.rst  utilities.rst
docs/api/_autosummary/: threepanewindows.DockableThreePaneWindow.rst  threepanewindows.EnhancedDockableThreePaneWindow.rst  threepanewindows.FixedThreePaneWindow.rst  threepanewindows.PaneConfig.rst  threepanewindows.ThemeManager.rst  threepanewindows.ThemeType.rst  threepanewindows.get_recommended_icon_formats.rst  threepanewindows.get_theme_manager.rst  threepanewindows.set_global_theme.rst  threepanewindows.validate_icon_path.rst
docs/examples/: basic_usage.rst  cross_platform_icons.rst  custom_widgets.rst  dockable_layout.rst  enhanced_professional.rst  fixed_layout.rst  fixed_width_panes.rst  index.rst  menu_integration.rst  real_world_applications.rst  status_bar_integration.rst  theming_examples.rst
docs/user_guide/: advanced_features.rst  best_practices.rst  cross_platform_icons.rst  customization.rst  index.rst  layouts.rst  theming.rst  troubleshooting.rst
examples/: flexible_layout_demo.py  logging_example.py  professional_enhanced_demo.py
scripts/: README.md  build-docs.ps1  build-docs.py  check_fix_markdown.py  check_markdown.bat  check_markdown.sh  markdown_status.py  quick_md_check.py  release.py  run_coverage.ps1  run_coverage.py  setup-dev.py  test-docs.py  verify-install.py  verify-pages.py  version_bump.py
stubs-package/: MANIFEST.in  README.md  setup.py
stubs-package/threepanewindows/: __init__.pyi  _version.pyi  cli.pyi  custom_menubar.pyi  custom_scrollbar.pyi  dockable.pyi  enhanced_dockable.pyi  examples.pyi  fixed.pyi  flexible.pyi  themes.pyi
stubs-package/threepanewindows/utils/: base.pyi  linux.pyi
tests/: README.md  __init__.py  conftest.py  test_central_theme_manager.py  test_central_theme_manager_simple.py  test_cli.py  test_custom_menubar.py  test_custom_scrollbar.py  test_dockable.py  test_enhanced_coverage.py  test_enhanced_dockable.py  test_examples.py  test_fixed.py  test_flexible.py  test_integration.py  test_logging_basic.py  test_logging_ci_safe.py  test_logging_config.py  test_logging_config_simple.py  test_logging_minimal.py  test_new_features_integration.py  test_new_features_summary.py  test_security.py  test_themes.py  test_version.py
threepanewindows/: __init__.py  _version.py  central_theme_manager.py  cli.py  custom_menubar.py  custom_scrollbar.py  dockable.py  enhanced_dockable.py  examples.py  fixed.py  flexible.py  logging_config.py  themes.py
threepanewindows-stubs/: README.md  central_theme_manager.pyi  enhanced_dockable.pyi  logging_config.pyi  setup.py
threepanewindows-stubs/utils/: __init__.pyi  macos.pyi  windows.pyi
threepanewindows/platform/: __init__.py  linux.py  macos.py  windows.py
threepanewindows/utils/: __init__.py  base.py  linux.py  macos.py  windows.py
